fixed button spacing

--- a/css/bunnysection.css
+++ b/css/bunnysection.css
@@ -5,14 +5,6 @@
 .bunnySection #logo {
     margin: 20px 0px;
 }
-.bunnySection .buttons {
-    margin: 10px 0px;
-    display: inline-block;
-}
-.bunnySection .buttons a {
-    float: left;
-    margin-right: 10px;
-}
 
 @media (max-width: 768px) {
     .bunnySection {
